--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -10,12 +10,19 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.\n\ <color=orange>A great performing autocannon, however has some overheating issues.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
-		@bulletVelocity = 1030
+		@maxDeviation = 0.23
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 150
+		@heatLoss = 750
+		
+
 		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
 		
@@ -33,14 +40,19 @@
 	@title = M39A1
 	@mass = 0.0809
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.
+	@description = @description = The Ford M39 cannon is a 20 mm calibre single-barrelled revolver cannon developed for the United States Air Force in the late 1940s. It was used on a number of fighter aircraft from the early 1950s through the 1980s.\n\ <color=orange>A great performing autocannon, however has some overheating issues.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = M39A1
 		@roundsPerMinute = 1500
-		@bulletVelocity = 1030
+		@maxDeviation = 0.23
 		@bulletType = 20x102mmBullet; 20x102mmHEBullet
 		@ammoName = 20mm
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 150
+		@heatLoss = 750
 		
 		%useCustomBelt = True    
 		%ammoBelt = 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmBullet; 20x102mmHEBullet; 20x102mmHEBullet;
@@ -57,14 +69,19 @@
 	@title = AN/M3
 	@mass = 0.06
 	@manufacturer = Kerbal Kombat Anthology
-	@description = During World War II, a faster-firing Browning was developed for aircraft use. The AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
+	@description = During World War II, a faster-firing Browning was developed for aircraft use. The AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.\n\ <color=orange>Machinegun that sacrifices raw RoF for accuracy.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = AN/M3
 		@roundsPerMinute = 890
-		@bulletVelocity = 1030
+		@maxDeviation = 0.22
 		@bulletType = 12.7mmAP; 12.7x99mmBullet;
 		@ammoName = .50cal
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 3000
+		@maxHeat = 15000
+		@heatPerShot = 184.5906902
+		@heatLoss = 1071.428571
 		
 		%useCustomBelt = True    
 		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
@@ -80,15 +97,20 @@
 	@title = AN/M3
 	@mass = 0.06
 	@manufacturer = Kerbal Kombat Anthology
-	@description = During World War II, a faster-firing Browning was developed for aircraft use. The Browning AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.
+	@description = During World War II, a faster-firing Browning was developed for aircraft use. The Browning AN/M3 increased the rate of fire to around 1,200 rounds per minute, while firing the same round with minimal change in weight or size. The AN/M3 was used in Korea on the P-51D-30, F-82 Twin Mustang, F-86 Sabre, F-84 Thunderjet and F-80 Shooting Star, and in Vietnam in the XM14/SUU-12/A gun pod.\n\ <color=orange>Machinegun that sacrifices raw RoF for accuracy.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = AN/M3
 		@roundsPerMinute = 890
-		@bulletVelocity = 1030
+		@maxDeviation = 0.22
 		@bulletType = 12.7mmAP; 12.7x99mmBullet;
 		@ammoName = .50cal
-		
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 3000
+		@maxHeat = 15000
+		@heatPerShot = 184.5906902
+		@heatLoss = 1071.428571
+
 		%useCustomBelt = True    
 		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
 		
@@ -104,14 +126,19 @@
 	@title = ADEN Mk.4
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.\n\ <color=orange>Extremely fast autocannon that sacrifices raw penetration power for firing rate.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
-		@bulletVelocity = 790
+		@maxDeviation = 0.188
 		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 110.2941176
+		@heatLoss = 625
 		
 		%useCustomBelt = True    
 		%ammoBelt = 30x129mmShell; 30x129mmShell;
@@ -127,14 +154,19 @@
 	@title = ADEN Mk.4
 	@mass = 0.092
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.
+	@description = The Royal Small Arms Factory ADEN is a 30mm revolver cannon used on many military aircraft, particularly those of the British Royal Air Force and Fleet Air Arm. Developed post-World War II primarily to meet British Air Ministry's requirement for increased lethality in aircraft armament, the cannon was fired electrically and is fully automatic once it is loaded.\n\ <color=orange>Extremely fast autocannon that sacrifices raw penetration power for firing rate.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = ADEN
 		@roundsPerMinute = 1700
-		@bulletVelocity = 790
+		@maxDeviation = 0.188
 		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 110.2941176
+		@heatLoss = 625
 		
 		%useCustomBelt = True    
 		%ammoBelt = 30x129mmShell; 30x129mmShell;
@@ -151,14 +183,19 @@
 	@title = DEFA 550
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.\n\ <color=orange>Extremely fast autocannon that sacrifices raw penetration power for firing rate.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
-		@bulletVelocity = 790
+		@maxDeviation = 0.188
 		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 110.2941176
+		@heatLoss = 625
 		
 		%useCustomBelt = True    
 		%ammoBelt = 30x129mmShell; 30x129mmShell;
@@ -174,14 +211,19 @@
 	@title = DEFA 550
 	@mass = 0.085
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.
+	@description = The DEFA cannon (Direction des Études et Fabrications d'Armement) is a family of widely used French-made aircraft revolver cannon firing standard 30mm calibre NATO rounds. The initial DEFA 551 was developed in the late 1940s. It was based on the German Mauser MG 213C, an experimental revolver cannon developed for the Luftwaffe.\n\ <color=orange>Extremely fast autocannon that sacrifices raw penetration power for firing rate.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = DEFA
 		@roundsPerMinute = 1700
-		@bulletVelocity = 790
+		@maxDeviation = 0.188
 		@bulletType = 30x129mmShell;
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 110.2941176
+		@heatLoss = 625
 		
 		%useCustomBelt = True    
 		%ammoBelt = 30x129mmShell; 30x129mmShell;
@@ -198,14 +240,19 @@
 	@title = N-37
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards..
+	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.\n\ <color=orange>A powerful autocannon that compensates its slow firing rate and overheating issueswith insane penetration and accuracy.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
-		@bulletVelocity = 690
+		@maxDeviation = 0.16
 		@bulletType = 37MMAP; 37mmHERM;
 		@ammoName = 40mm
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
+		@maxHeat = 15000
+		@heatPerShot = 502.8409091
+		@heatLoss = 625
 		
 		%useCustomBelt = True    
 		%ammoBelt = 37MMAP; 37mmHERM; 37mmHERM; 37mmHERM
@@ -221,15 +268,20 @@
 	@title = N-37
 	@mass= 0.103
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.
+	@description = The Nudelman N-37 was a 37 mm aircraft auto-cannon used by the Soviet Union. The N-37 was a sizeable weapon firing a massive shell. The N-37 was used in the MiG-9, MiG-15, MiG-17, and early MiG-19 fighters, the Yakovlev Yak-25, and others. Production lasted through the late 1950s, although it remained in service for many years afterwards.\n\ <color=orange>A powerful autocannon that compensates its slow firing rate and overheating issueswith insane penetration and accuracy.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {	
 		@shortName = N-37
 		@roundsPerMinute = 400
-		@bulletVelocity = 690
+		@maxDeviation = 0.16
 		@bulletType = 37MMAP; 37mmHERM;
 		@ammoName = 40mm
-		
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
+		@maxHeat = 15000
+		@heatPerShot = 502.8409091
+		@heatLoss = 625
+
 		%useCustomBelt = True    
 		%ammoBelt = 37MMAP; 37mmHERM; 37mmHERM; 37mmHERM
 		
@@ -245,15 +297,20 @@
 	@title = NS-23
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.\n\ <color=orange>Slow firing autocannon with the best accuracy in its time period.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NS-23
 		@roundsPerMinute = 850
-		@bulletVelocity = 690
+		@maxDeviation = 0.15
 		@bulletType = 23x115mmBullet;
 		@ammoName = 20mm
-		
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 162.605042
+		@heatLoss = 428.5714286
+
 		%useCustomBelt = True
 		%ammoBelt = 23x115mmBullet; 23x115mmBullet;
 		
@@ -268,15 +325,20 @@
 	@title = NS-23
 	@mass = 0.037
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NS-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NS-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.\n\ <color=orange>Slow firing autocannon with the best accuracy in its time period.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-23
 		@roundsPerMinute = 850
-		@bulletVelocity = 690
+		@maxDeviation = 0.15
 		@bulletType = 23x115mmBullet;
 		@ammoName = 20mm
-		
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
+		@maxHeat = 15000
+		@heatPerShot = 162.605042
+		@heatLoss = 428.5714286
+
 		%useCustomBelt = True
 		%ammoBelt = 23x115mmBullet; 23x115mmBullet;
 		
@@ -292,14 +354,19 @@
 	@title = NR-30
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.\n\ <color=orange>Relatively slow firing rate but fires very powerful rounds.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
-		@roundsPerMinute = 1000
-		@bulletVelocity = 780
+		@roundsPerMinute = 850
+		@maxDeviation = 0.24
 		@bulletType = 30x173Bullet; 30x173HEBullet
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
+		@maxHeat = 15000
+		@heatPerShot = 173.0769231
+		@heatLoss = 576.9230769
 		
 		%useCustomBelt = True
 		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet
@@ -315,14 +382,19 @@
 	@title = NR-30
 	@mass = 0.066
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.
+	@description = The Nudelman-Rikhter NR-23 is a Soviet auto-cannon widely used in military aircraft of the Soviet Union and Warsaw Pact.\n\ <color=orange>Relatively slow firing rate but fires very powerful rounds.</color>
 	@author = Toonu
 	@MODULE[ModuleWeapon] {
 		@shortName = NR-30
-		@roundsPerMinute = 1000
-		@bulletVelocity = 780
+		@roundsPerMinute = 850
+		@maxDeviation = 0.24
 		@bulletType = 30x173Bullet; 30x173HEBullet
 		@ammoName = 30mm
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
+		@maxHeat = 15000
+		@heatPerShot = 173.0769231
+		@heatLoss = 576.9230769
 		
 		%useCustomBelt = True
 		%ammoBelt = 30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet
