--- a/EW/Balancing/MM_BDA.cfg
+++ b/EW/Balancing/MM_BDA.cfg
@@ -5,10 +5,13 @@
 
 @PART[bahaTurret]:NEEDS[SMA]:FOR[KKA] {
     @title = M2 Turret
+	@description = The M2 Browning .50 caliber machine gun is a heavy machine gun designed towards the end of World War I, this twin-mount version is used as a light anti-aircraft (AA) gun in some ships.\n\ <color=orange>Heavy machinegun with average accuracy and decent firing rate. Counts as two MGs.</color>
+
 	
 	@MODULE[ModuleWeapon] {
+		@bulletType = 12.7x108mmBullet; 12.7x108mmBulletHE
 		%useCustomBelt = True    
-		%ammoBelt = 12.7mmBullet; 12.7mmAPIBullet
+		%ammoBelt = 12.7x108mmBullet; 12.7x108mmBulletHE
 		
 		@roundsPerMinute = 900
 		@maxDeviation = 0.36
@@ -74,6 +77,7 @@
 	@title = AN/M3 HMG
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm AN/M3 HMG
+		@description = <color=orange>Fast firing MG, boasts great penetration compared to previous MGs.</color>
 		
 		%useCustomBelt = True  
 		%ammoBelt = 12.7mmAP; 12.7mmAP; 12.7mmAP; 12.7x99mmBullet; 12.7x99mmBullet;
@@ -82,6 +86,13 @@
 		%engageMissile = false
 		%engageGround = false
 		%engageSLW = false
+
+		@maxHeat = 15000
+		@heatPerShot = 244.3181818
+		@heatLoss = 937.5
+
+		@roundsPerMinute = 1150
+		@maxDeviation = 0.25
 	}
 }
 @PART[bahaClusterBomb]:NEEDS[SMA]:FOR[KKA] {
