--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -105,6 +105,9 @@
 	@tntMass = 0.25
     @fuzeType = None 
 }
+@BULLET[40mmLuft42AP]:NEEDS[SMA] {
+	@apBulletMod = 0.9
+}
 @BULLET[40x53HEBullet]:NEEDS[SMA] {
 	@tntMass = 0.15
 }
