--- a/EW/Balancing/MM_FDC.cfg
+++ b/EW/Balancing/MM_FDC.cfg
@@ -8,9 +8,9 @@
 		@yawSpeedDPS = 14
 	}
 	@MODULE[ModuleWeapon] {
-		@maxDeviation = 0.04294
-		@maxEffectiveDistance = 6000
-		@maxTargetingRange = 6200
+		@maxDeviation = 0.08588
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4200
 	}
 }
 @PART[AbramsA2]:NEEDS[SMA] {
@@ -33,12 +33,28 @@
 @PART[FV4005]:NEEDS[SMA] {
 	@title = FV4005 Stage II
 	-MODULE[ModuleRadar] {}
+
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 2
+		
+		@maxDeviation = 0.0443
+		@maxEffectiveDistance = 8000
+		@maxTargetingRange = 8200
+	}
 }
 @PART[HSTV]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
 }
 @PART[M103]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
+
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 3
+
+		@maxDeviation = 0.0681
+		@maxEffectiveDistance = 5300
+		@maxTargetingRange = 5500
+	}
 }
 @PART[M3Bradly]:NEEDS[SMA] {
 	@title = M3 Bradley CFV
@@ -54,6 +70,12 @@
 	@MODULE[ModuleWeapon] {
 		%useCustomBelt = True    
 		%ammoBelt = 40MMAPT; 40MMHEFIT; 40MMHEFIT; 40MMHEFIT
+
+		@roundsPerMinute = 160
+
+		@maxDeviation = 0.14
+		@maxEffectiveDistance = 4500
+		@maxTargetingRange = 4800
 	}
 }
 @PART[T95]:NEEDS[SMA] {
@@ -61,9 +83,9 @@
 	
 	@MODULE[ModuleWeapon] {
 		@roundsPerMinute = 4.5
-		@maxDeviation = 0.0425
-		@maxEffectiveDistance = 5000
-		@maxTargetingRange = 5200
+		@maxDeviation = 0.085
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3700
 	}
 	
 	@MODULE[ModuleTurret] {
@@ -81,7 +103,7 @@
 	
 	@MODULE[ModuleWeapon] {
 		@roundsPerMinute = 1.5
-		@maxDeviation = 0.025
+		@maxDeviation = 0.05
 	}
 }
 @PART[TortoiseAPCBC]:NEEDS[SMA] {
@@ -94,9 +116,9 @@
 
 	@MODULE[ModuleWeapon] {
 		@roundsPerMinute = 5
-		@maxDeviation = 0.041
-		@maxEffectiveDistance = 5000
-		@maxTargetingRange = 5200
+		@maxDeviation = 0.082
+		@maxEffectiveDistance = 3750
+		@maxTargetingRange = 4000
 	}
 	
 }
@@ -106,9 +128,13 @@
 		%useCustomBelt = True    
 		%ammoBelt = 40mmLuft42AP; 40mmLuft42HE; 40mmLuft42HE; 40mmLuft42HE
 		
-		@maxDeviation = 0.1
-		@maxEffectiveDistance = 4000
-		@maxTargetingRange = 4300
+		@maxHeat = 15000
+		@heatPerShot = 691.9642857
+		@heatLoss = 625
+
+		@maxDeviation = 0.332
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2700
 	}
 }
 @PART[Elden40]:NEEDS[SMA] {
@@ -137,6 +163,16 @@
 }
 @PART[Strids74]:NEEDS[SMA] {
 	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 29
+		@yawSpeedDPS = 29
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 8
+		@maxDeviation = 0.1009
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4200
+	}
 }
 
 
@@ -147,22 +183,50 @@
 	}
 	@MODULE[ModuleWeapon] {
 		@roundsPerMinute = 5
-		@maxDeviation = 0.04
-		@maxEffectiveDistance = 4000
-		@maxTargetingRange = 4300
+		@maxDeviation = 0.08
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3300
 	}
 }
 @PART[Amx50B]:NEEDS[SMA] {
 	@title = AMX 50B
 	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleWeapon] {
+
+		@roundsPerMinute = 10
+
+		@maxDeviation = 0.1126
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5300
+	}
 }
 @PART[AmxELCbis]:NEEDS[SMA] {
 	@title = AMX ELC bis
 	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 28
+		@yawSpeedDPS = 28
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 4
+		@maxDeviation = 0.065
+		@maxEffectiveDistance = 4000
+		@maxTargetingRange = 4200
+	}
 }
 @PART[BatChat25]:NEEDS[SMA] {
 	@title = Batignolles-Chatillon Char 25t
 	-MODULE[ModuleRadar] {}
+	@MODULE[ModuleTurret] {
+		@pitchSpeedDPS = 25
+		@yawSpeedDPS = 25
+	}
+	@MODULE[ModuleWeapon] {
+		@roundsPerMinute = 9
+		@maxDeviation = 0.09705
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
+	}
 }
 
 
@@ -173,9 +237,9 @@
 	}
 	@MODULE[ModuleWeapon] {
 		@roundsPerMinute = 4
-		@maxDeviation = 0.0405
-		@maxEffectiveDistance = 4500
-		@maxTargetingRange = 4800
+		@maxDeviation = 0.081
+		@maxEffectiveDistance = 3500
+		@maxTargetingRange = 3800
 	}
 }
 @PART[PantherII]:NEEDS[SMA] {
@@ -186,9 +250,9 @@
 		@yawSpeedDPS = 25
 	}
 	@MODULE[ModuleWeapon] {
-		@maxDeviation = 0.041
-		@maxEffectiveDistance = 3000
-		@maxTargetingRange = 3300
+		@maxDeviation = 0.082
+		@maxEffectiveDistance = 2000
+		@maxTargetingRange = 2300
 		
 		@bulletType = 75mmStrv74HE, 75mmStrv74APCBC, 75MMAPFDS
 	}
@@ -202,6 +266,10 @@
 }
 @PART[Wirbelwind]:NEEDS[SMA] {
 	@MODULE[ModuleWeapon] {
+		@maxHeat = 15000
+		@heatPerShot = 1160
+		@heatLoss = 750
+
 		@maxDeviation = 0.09
 		@maxEffectiveDistance = 2500
 		@maxTargetingRange = 2800
@@ -220,7 +288,7 @@
 }
 @PART[IS2]:NEEDS[SMA] {
 	@title = 52PT471 (IS-2)
-	@description = The Object 240 / IS-122 / IS-2 heavy tank turret armed with the 52PT471 / D-25T 122mm gun. IS-2 went into service in April 1944 and was used as a spearhead by the Red Army in the final stage of the Battle of Berlin.
+	@description = The IS-2 went into service in April 1944 and was used as a spearhead by the Red Army in the final stage of the Battle of Berlin.\n\ <color=orange>Fast firing rate and turret traverse, perfect for an assault tank.</color>
 	
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
@@ -232,14 +300,14 @@
 		%shortName = 122mm 52PT471
 		
 		@roundsPerMinute = 5.5
-		@maxDeviation = 0.0413
-		@maxEffectiveDistance = 4000
-		@maxTargetingRange = 4200
+		@maxDeviation = 0.0826
+		@maxEffectiveDistance = 3000
+		@maxTargetingRange = 3200
 	}
 }
 @PART[IS7]:NEEDS[SMA] {
 	@title = S-70 (IS-7)
-	@description = The Object 260 / IS-7 heavy tank turret armed with the S-70 130mm gun, is a Soviet tank that began development in 1945. The vehicle existed only in prototype form and was cancelled in favor of the T-10 tank.
+	@description = The IS-7 heavy tank, also known by its project name Object 260, is a Soviet tank that began development in 1945. The vehicle existed only in prototype form and was cancelled in favor of the T-10 tank.\n\ <color=orange>A Jack of all trades heavy cannon.</color>
 	
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
@@ -250,16 +318,23 @@
 		%shortName = 130mm S-70
 		
 		@roundsPerMinute = 5
-		@maxDeviation = 0.0463
-		@maxEffectiveDistance = 5500
-		@maxTargetingRange = 5700
+		@maxDeviation = 0.0926
+		@maxEffectiveDistance = 3750
+		@maxTargetingRange = 4000
 	}
 }
 @PART[Obj268]:NEEDS[SMA] {
 	@title = M-64 (Object 268)
-	@description = The Object 268 self-propelled gun was one of the many derivative designs of the T-10 heavy tank. The concept began on 2 July 1952 at the Leningrad Kirov Plant on the order of the Council of Ministers USSR. The Object 268 would follow in the same line of doctrine as had the earlier Soviet self-propelled guns of World War II, the SU-100, -122, and -152. This contrasted with the Western concept of a self-propelled gun being used as an artillery piece rather than the Soviet usage as a tank destroyer. There had been earlier attempts at converting a heavy tank to a self-propelled gun, using the chassis of the IS-4 and IS-7, but those had not been fully developed and were cancelled. The IS-4 production was running too slowly and the IS-7 had been too complex to manufacture in large numbers. The Leningrad Kirov Plant worked to produce an SPG on the T-10 chassis by combining it with the 152 mm M-64 cannon, which had high velocity and was much more powerful than earlier 152 mm cannons. Drawing work led to the Object 730 SPG which would be paired with the M-53 cannon, a parallel development to the M-64.
+	@description = The Object 268 self-propelled gun was one of the many derivative designs of the T-10 heavy tank. The concept began on 2 July 1952 at the Leningrad Kirov Plant on the order of the Council of Ministers USSR. The Object 268 would follow in the same line of doctrine as had the earlier Soviet self-propelled guns of World War II, the SU-100, -122, and -152. This contrasted with the Western concept of a self-propelled gun being used as an artillery piece rather than the Soviet usage as a tank destroyer. There had been earlier attempts at converting a heavy tank to a self-propelled gun, using the chassis of the IS-4 and IS-7, but those had not been fully developed and were cancelled. The IS-4 production was running too slowly and the IS-7 had been too complex to manufacture in large numbers. The Leningrad Kirov Plant worked to produce an SPG on the T-10 chassis by combining it with the 152 mm M-48 cannon, which had high velocity and was much more powerful than earlier 152 mm cannons. Drawing work led to the Object 730 SPG which would be paired with the M-53 cannon, a parallel development to the M-48.\n\ <color=orange>Extremely powerful heavy cannon with powerful HE rounds, AP rounds are next to useless.</color>
+	
 	@MODULE[ModuleWeapon] {
 		%shortName = 100mm M-64
+
+		@roundsPerMinute = 3
+
+		@maxDeviation = 0.04739
+		@maxEffectiveDistance = 8000
+		@maxTargetingRange = 8300
 	}
 }
 @PART[Obj906]:NEEDS[SMA] {
@@ -272,15 +347,22 @@
 }
 @PART[T-10]:NEEDS[SMA] {
 	@title = 52PT471N (T-10)
-	@description = The Object 730 / T-10 / IS-5 / IS-8 / IS-9 / IS-10 heavy tank turret armed with the 122mm 52PT471N / D-25TS gun was a Soviet heavy tank of the Cold War, the final development of the IS tank series. During development, it was called IS-8 and IS-9. It was accepted into production in 1952 as the IS-10 (Iosif Stalin, Russian form of Joseph Stalin), but due to the political climate in the wake of Stalin's death in 1953, it was renamed T-10.
+	@description = The T-10 (also known as Object 730 or, IS-8) was a Soviet heavy tank of the Cold War, the final development of the IS tank series. During development, it was called IS-8 and IS-9. It was accepted into production in 1952 as the IS-10 (Iosif Stalin, Russian form of Joseph Stalin), but due to the political climate in the wake of Stalin's death in 1953, it was renamed T-10. \n\ <color=orange>Accurate medium turret that packs a large punch however has slower turret traverse and firing rate than its peers.</color>
+
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleWeapon] {
 		%shortName = 122mm 52PT471N
+
+		@roundsPerMinute = 3
+
+		@maxDeviation = 0.07
+		@maxEffectiveDistance = 5000
+		@maxTargetingRange = 5300
 	}
 }
 @PART[T-44]:NEEDS[SMA] {
 	@title = ZIS-S-53 (T-44)
-	@description = The Object 136 / T-44 medium tank is first developed and produced near the end of World War II by the Soviet Union. It was the successor to the T-34, offering improved ride and cross-country performance and much greater armor. Designed to be equipped with an 85 mm main gun, by the time it was fully tested the T-34 had also moved to this weapon. Both tanks offered similar performance, so introducing the T-44 was not considered as important as increasing T-34 production. Fewer than 2,000 T-44s were built, compared to about 58,000 T-34s. Although the T-44 was available by the end of the war, it was not used in combat.
+	@description = The T-44 is a medium tank first developed and produced near the end of World War II by the Soviet Union. It was the successor to the T-34, offering improved ride and cross-country performance and much greater armor. Designed to be equipped with an 85 mm main gun, by the time it was fully tested the T-34 had also moved to this weapon. Both tanks offered similar performance, so introducing the T-44 was not considered as important as increasing T-34 production. Fewer than 2,000 T-44s were built, compared to about 58,000 T-34s. Although the T-44 was available by the end of the war, it was not used in combat.\n\ <color=orange>Medium tank turret with medium performance.</color>
 	-MODULE[ModuleRadar] {}
 	@MODULE[ModuleTurret] {
 		@pitchSpeedDPS = 20
@@ -290,14 +372,14 @@
 		%shortName = 85mm ZIS-S-53
 		
 		@roundsPerMinute = 5
-		@maxDeviation = 0.0423
+		@maxDeviation = 0.0846
 		@maxEffectiveDistance = 2500
 		@maxTargetingRange = 2800
 	}
 }
 @PART[T-54]:NEEDS[SMA] {
 	@title = 52PT412 (T-54)
-	@description = The Object 137 / T-54 medium tank turret armed with 52PT412 / D-10T 100mm gun. T-54 / T-55 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed at Nizhny Tagil by the end of 1945.
+	@description = The T-54 and T-55 tanks are a series of Soviet main battle tanks introduced in the years following the Second World War. The first T-54 prototype was completed at Nizhny Tagil by the end of 1945.\n\ <color=orange>A strong medium cannon that trades accuracy, firing rate and traverse speed for higher penetration.</color>
 	-MODULE[ModuleRadar] {}
 	
 	@MODULE[ModuleTurret] {
@@ -308,8 +390,8 @@
 		%shortName = 100mm 52PT412
 		
 		@roundsPerMinute = 4.5
-		@maxDeviation = 0.043
-		@maxEffectiveDistance = 2800
+		@maxDeviation = 0.086
+		@maxEffectiveDistance = 2500
 		@maxTargetingRange = 3000
 	}
 }
