--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -320,7 +320,7 @@
 }
 @PART[HS404]:NEEDS[SMA] {
 	@title = HS.404
-	@description = The Hispano-Suiza HS.404 auto-cannon originally designed in the mid-1930s. It was widely used as an aircraft, naval and land-based weapon by French, British, American and other military services, particularly during World War II. The cannon is also referred to as Birkigt type 404, after its designer.
+	@description = The Hispano-Suiza HS.404 auto-cannon originally designed in the mid-1930s. It was widely used as an aircraft, naval and land-based weapon by French, British, American and other military services, particularly during World War II. The cannon is also referred to as Birkigt type 404, after its designer.\n\ <color=orange>Has a slower fire rate than its peers but compensates with a more heat-tolerant barrel.</color>
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm HS.404
 		@bulletType = 20x110mmAPShell; 20x110mmHEShell
@@ -328,9 +328,13 @@
 		%useCustomBelt = True    
 		%ammoBelt =  20x110mmAPShell; 20x110mmAPShell; 20x110mmHEShell; 20x110mmHEShell; 20x110mmAPShell;
 		
+		@maxHeat = 15000
+		@heatPerShot = 328.2828283
+		@heatLoss = 555.5555556
+
 		@maxDeviation = 0.2
-		@maxEffectiveDistance = 3000
-		@maxTargetingRange = 3200
+		@maxEffectiveDistance = 2500
+		@maxTargetingRange = 2800
 	}
 }
 @PART[METEOR]:NEEDS[SMA] {
@@ -344,13 +348,19 @@
 }
 @PART[MG151]:NEEDS[SMA] {
 	@title = MG 151/20
+	@description = he 20 mm MG 151/20 cannon, was widely used on German Luftwaffe fighters, night fighters, fighter-bombers, bombers and ground-attack aircraft. Salvaged guns saw post-war use by other nations.\n\ <color=orange>Fast firing but inaccurate 20mm autocannon.</color>
 	@MODULE[ModuleWeapon] {
 		%shortName = 20mm MG 151/20
 		@bulletType = 20x82mmAPShell; 20x82mmMGShell
 		
+		
 		%useCustomBelt = True    
 		%ammoBelt =  20x82mmAPShell; 20x82mmAPShell; 20x82mmMGShell; 20x82mmMGShell; 20x82mmAPShell;
 		
+		@maxHeat = 15000
+		@heatPerShot = 236.7892977
+		@heatLoss = 652.173913
+
 		@maxDeviation = 0.28
 		@maxEffectiveDistance = 2500
 		@maxTargetingRange = 2800
@@ -365,7 +375,7 @@
 }
 @PART[MK103]:NEEDS[SMA] {
 	@title = MK 103
-	@description = The Rheinmetall-Borsig MK 103 30mm calibre German cannon mounted on German combat aircraft during World War II developed from the MK 101. Compared to the MK 101 it was faster firing, and was originally intended to develop a higher muzzle velocity than the MK 101. Later in the war the MK 103 was also used as a ground-based anti-aircraft (AA) weapon, using single or dual mounts. It was also used as a flak auto-cannon in the Flakpanzer IV "Kugelblitz".
+	@description = The Rheinmetall-Borsig MK 103 30mm calibre German cannon mounted on German combat aircraft during World War II developed from the MK 101. Compared to the MK 101 it was faster firing, and was originally intended to develop a higher muzzle velocity than the MK 101. Later in the war the MK 103 was also used as a ground-based anti-aircraft (AA) weapon, using single or dual mounts. It was also used as a flak auto-cannon in the Flakpanzer IV "Kugelblitz".\n\ <color=orange>Heavy air-autocannon that sacrifices accuracy for firing rate.</color>
 	@MODULE[ModuleWeapon] {
 		%shortName = 30mm MK 103
 		
@@ -374,14 +384,18 @@
 		%useCustomBelt = True    
 		%ammoBelt =  30x173Bullet; 30x173Bullet; 30x173HEBullet; 30x173HEBullet; 30x173Bullet;
 		
-		@maxDeviation = 0.15
+		@maxHeat = 15000
+		@heatPerShot = 420
+		@heatLoss = 500
+
+		@maxDeviation = 0.3
 		@maxEffectiveDistance = 3000
 		@maxTargetingRange = 3200
 	}
 }
 @PART[VickersMG]:NEEDS[SMA] {
 	@title = Vickers MG
-	@description = The Vickers 7.7mm Machine Gun of the British Army. Not to be confused with the Maxim machine gun, it was in service from before the First World War until the 1960s, with air-cooled versions of it on many Allied World War I fighter aircraft.
+	@description = The Vickers 7.7mm Machine Gun of the British Army. Not to be confused with the Maxim machine gun, it was in service from before the First World War until the 1960s, with air-cooled versions of it on many Allied World War I fighter aircraft.\n\ <color=orange>Light machine gun that fires 7.7mm rounds. Fast and accurate.</color>
 	@MODULE[ModuleWeapon] {
 		%shortName = 7.7mm Vickers MG
 		@bulletType = 7.7x56RmmBullet; 7.7x56RmmBulletHEI
@@ -389,6 +403,11 @@
 		%useCustomBelt = True
 		%ammoBelt = 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBullet; 7.7x56RmmBulletHEI;
 		
+		@maxHeat = 15000
+		@heatPerShot = 236.7477083
+		@heatLoss = 1500
+
+		@maxDeviation = 0.5
 		@maxEffectiveDistance = 2000
 		@maxTargetingRange = 2100
 	}
@@ -626,7 +645,7 @@
 }
 @PART[ShVAK-E]:NEEDS[SMA] {
 	@title = 56P533 ShVAK MG
-	@description = The ShVAK "Shpitalnyi-Vladimirov Aviatsionnyi Krupnokalibernyi" (Shpitalny-Vladimirov large-calibre for aircraft) 20mm auto-cannon used by the Soviet Union during World War II. It was designed by Boris Shpitalniy and Semyon Vladimirov and entered production in 1936. ShVAK were installed in many models of Soviet aircraft and a version of the gun produced for light tanks.
+	@description = The ShVAK "Shpitalnyi-Vladimirov Aviatsionnyi Krupnokalibernyi" (Shpitalny-Vladimirov large-calibre for aircraft) 20mm auto-cannon used by the Soviet Union during World War II. It was designed by Boris Shpitalniy and Semyon Vladimirov and entered production in 1936. ShVAK were installed in many models of Soviet aircraft and a version of the gun produced for light tanks.\n\ <color=orange>Light and fast-firing autocannon.</color>
 	-MODULE[JSIExternalCameraSelector] {}
 	
 	@MODULE[ModuleWeapon] {
@@ -636,7 +655,11 @@
 		%useCustomBelt = True    
 		%ammoBelt =  20x99mmBZShell; 20x99mmBZShell; 20x99mmOZShell; 20x99mmOZShell; 20x99mmBZShell;
 		
-		@maxDeviation = 0.26
+		@maxHeat = 15000
+		@heatPerShot = 168.75
+		@heatLoss = 750
+
+		@maxDeviation = 0.52
 		@maxEffectiveDistance = 2500
 		@maxTargetingRange = 2800
 	}
@@ -751,15 +774,21 @@
 }
 @PART[M2HB]:NEEDS[SMA] {
 	@title = M2HB HMG
+	@description = The M2 machine gun or Browning .50 caliber machine gun is a heavy machine gun designed toward the end of World War I by John Browning. Its design is similar to Browning's earlier M1919 Browning machine gun, which was chambered for the .30-06 cartridge. The M2 uses the much larger and much more powerful .50 BMG (12.7 mm) cartridge, which was developed alongside and takes its name from the gun itself (BMG standing for Browning machine gun).\n\ <color=orange>Heavy machinegun with average accuracy and decent firing rate.</color>
 	@MODULE[ModuleWeapon] {
 		%shortName = 12.7mm M2HB HMG
-		@bulletType = 12.7x99mmBullet; 12.7x81SRmmBulletAP
+		@bulletType = 12.7x108mmBullet; 12.7x108mmBulletHE
+		
 		
 		%useCustomBelt = True    
-		%ammoBelt =  12.7x99mmBullet; 12.7x81SRmmBulletAP;
+		%ammoBelt =  12.7x108mmBullet; 12.7x108mmBulletHE;
 		
+		@maxHeat = 15000
+		@heatPerShot = 244.3181818
+		@heatLoss = 937.
+
 		@roundsPerMinute = 900
-		@maxDeviation = 0.36
+		@maxDeviation = 0.72
 	}
 }
 @PART[TOW2B]:NEEDS[SMA] {
