--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -1104,3 +1104,98 @@
 	}
 }
 
+@PART[SMTrack85RWBN]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack9B6RW]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack10SportTrack1]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack11RW4BA]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTracK12RW7Med]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack14RW6Med]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTracK15RW11NB]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack16RWST]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTracK17RW11NB]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTracK18RW9HD]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTracK18RW9HDX2]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrac3A5]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrac5A1CCN]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrac6RW7N]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrac7RW6N]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
+
+@PART[SMTrack1D]:NEEDS[SMA]:FINAL {
+	@MODULE[HitpointTracker] {
+    	@ArmorThickness = 60
+	}
+}
