--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -49,7 +49,7 @@ SUBCATEGORY {
 		CHECK {
 			//AP+ mostly
 			type = name
-			value = 109Prop, corsairprop, duplexcyclone, fighterProp, merlin, spitfiremerlin, yakprop, zeroprop, eng_bmw003
+			value = 51prop, chaikaprop, spadprop, fokkerprop, zeroprop, 109Prop, corsairprop, duplexcyclone, fighterProp, merlin, spitfiremerlin, yakprop, eng_bmw003
 		}
     }	
 	FILTER {
@@ -108,7 +108,7 @@ SUBCATEGORY {
 		FILTER {
 		CHECK {
 			type = name
-			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23, bahaGatlingGun, bahaHiddenVulcan, TU423
+			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23,
 		}
     }
 
@@ -126,13 +126,13 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = 4K40Termit, aam_AIM7E, aam_AIM9D, aam_R3R, aam_R3S, aam_R530, aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, S125NevaMissile, sam_3M8, sam_5V21, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, SkudD, ssm_9M14, ssm_Swingfire, sam_9M32
+			value = 4K40Termit, aam_AIM7E, aam_AIM9D, aam_R3R, aam_R3S, aam_R530, aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_ADM20, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, S125NevaMissile, sam_3M8, sam_5V21, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, SkudD, ssm_9M14, ssm_Swingfire, sam_9M32
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = air_GSh23L, AK230, APC30Cg2A42, bahaH70Turret, bahaM102Howitzer, CROWS7_62, D30, Eland90BTurret, Elden40, Leopard1, M113GunTurret, M163VADS, mk19Turret, O120, Obj906, Ru251, ShilkaZSU234turret, T-64, T57AP-T, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, theotomelara76compact
+			value =  bahaGatlingGun, bahaHiddenVulcan, air_GSh23L, AK230, APC30Cg2A42, bahaH70Turret, bahaM102Howitzer, CROWS7_62, D30, Eland90BTurret, Elden40, Leopard1, M113GunTurret, M163VADS, mk19Turret, O120, Obj906, Ru251, ShilkaZSU234turret, T-64, T57AP-T, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, theotomelara76compact, TU423
 		}
     }
 	FILTER {
