--- a/Turrets/tank_EBR90.cfg
+++ b/Turrets/tank_EBR90.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = EBR-90 Panhard
 	manufacturer = Kerbal Kombat Anthology
-	description = The Panhard EBR (Panhard Engin Blindé de Reconnaissance) is an armoured car designed by Panhard for the French Army and later used across the globe, notably by the French Army during the Algerian War and the Portuguese Army during the Portuguese Colonial War in Angola, Mozambique and Guinea-Bissau.
+	description = The Panhard EBR (Panhard Engin Blindé de Reconnaissance) is an armoured car designed by Panhard for the French Army and later used across the globe, notably by the French Army during the Algerian War and the Portuguese Army during the Portuguese Colonial War in Angola, Mozambique and Guinea-Bissau.\n\ <color=orange>Light cannon that fires faster than its peers at the cost of accuracy.</color>
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -49,8 +49,8 @@ PART {
 		yawTransformName = yawTransform
 		pitchTransformName = pitchTransform
 
-		pitchSpeedDPS = 8
-		yawSpeedDPS = 21
+		pitchSpeedDPS = 35
+		yawSpeedDPS = 35
 
 		minPitch = -6
 		maxPitch = 10
@@ -75,14 +75,14 @@ PART {
 		fireAnimName = fireAnimationEBR90
 		spinDownAnimation = false
 
-		BeltFed = True // enables mag-fed weapons
-		RoundsPerMag = 6 // shots per magazine or shots per burst if BurstFire = true
-		ReloadTime = 20 // time(sec) needed to reload
+		//BeltFed = True // enables mag-fed weapons
+		//RoundsPerMag = 6 // shots per magazine or shots per burst if BurstFire = true
+		//ReloadTime = 20 // time(sec) needed to reload
 
-		roundsPerMinute = 12
-		maxDeviation = 0.04
-		maxTargetingRange = 8000
-		maxEffectiveDistance = 8000
+		roundsPerMinute = 10
+		maxDeviation = 0.086
+		maxTargetingRange = 4500
+		maxEffectiveDistance = 4700
 
 		ammoName = CannonShells
 		bulletType = 90MMAPC
