--- a/Turrets/tank_M48.cfg
+++ b/Turrets/tank_M48.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = M48A1
 	manufacturer = Kerbal Kombat Anthology
-	description = The M48 Patton is an American first generation main battle tank introduced in February 1951, being designated as the 90mm Gun Tank: M48. It was designed as a replacement for the M26 Pershing, M4 Sherman variants and M46 Pattons used in the Korean War, and as the successor to the M47 Patton. Numerous examples of the M48 saw combat use in various Arab–Israeli conflicts and the Vietnam War.
+	description = The M48 Patton is an American first generation main battle tank introduced in February 1951, being designated as the 90mm Gun Tank: M48. It was designed as a replacement for the M26 Pershing, M4 Sherman variants and M46 Pattons used in the Korean War, and as the successor to the M47 Patton. Numerous examples of the M48 saw combat use in various Arab–Israeli conflicts and the Vietnam War.\n\ <color=orange>Average light cannon with average performance overall.</color>
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -50,8 +50,8 @@ PART {
 		yawTransformName = yawTransform
 		pitchTransformName = pitchTransform
 
-		pitchSpeedDPS = 8
-		yawSpeedDPS = 17
+		pitchSpeedDPS = 30
+		yawSpeedDPS = 30
 
 		minPitch = -9
 		maxPitch = 19
@@ -77,9 +77,9 @@ PART {
 		spinDownAnimation = false
 
 		roundsPerMinute = 7
-		maxDeviation = 0.04
-		maxTargetingRange = 2000
-		maxEffectiveDistance = 2000
+		maxDeviation = 0.0864
+		maxTargetingRange = 4300
+		maxEffectiveDistance = 4000
 
 		ammoName = CannonShells
 		bulletType = 90MMAPCR; 90MMHEATFSGer
