--- a/Turrets/tank_PT-76.cfg
+++ b/Turrets/tank_PT-76.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 2A16 (PT-76)
 	manufacturer = Kerbal Kombat Anthology
-	description = The Object 740B / PT-76 Soviet amphibious light tank turret armed with 76 mm 2А16 / D-56TS / 52-PT-347 tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles. 
+	description = The Object 740B / PT-76 Soviet amphibious light tank turret armed with 76 mm 2А16 / D-56TS / 52-PT-347 tank gun introduced in the early 1950s and soon became the standard reconnaissance tank of the Soviet Army and the other Warsaw Pact armed forces. The PT-76 is used in the reconnaissance and fire-support roles.\n\ <color=orange>Small light cannon firing small shells but boasts fast turret traverse speed.</color>
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -50,8 +50,8 @@ PART {
 		yawTransformName = yawTransform
 		pitchTransformName = pitchTransform
 
-		pitchSpeedDPS = 8
-		yawSpeedDPS = 20
+		pitchSpeedDPS = 30
+		yawSpeedDPS = 38
 
 		minPitch = -4
 		maxPitch = 30
@@ -78,9 +78,9 @@ PART {
 		spinDownAnimation = false
 
 		roundsPerMinute = 6
-		maxDeviation = 0.04
-		maxTargetingRange = 2000
-		maxEffectiveDistance = 2000
+		maxDeviation = 0.079
+		maxTargetingRange = 4200
+		maxEffectiveDistance = 4000
 
 		ammoName = CannonShells
 		bulletType = 76.2MMNAPCR; 76.2MMMHEATFS
