--- a/Turrets/tank_Centurion.cfg
+++ b/Turrets/tank_Centurion.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = Centurion Mk. 10
 	manufacturer = Kerbal Kombat Anthology
-	description = The Centurion was the primary British army main battle tank of the post-Second World War period. Introduced in 1945, it is widely considered to be one of the most successful post-war tank designs, remaining in production into the 1960s, and seeing combat in the front lines into the 1980s. The chassis was also adapted for several other roles, and these have remained in service to this day. It became one of the most widely used tank designs, equipping armies around the world, with some still in service until the 1990s.
+	description = The Centurion was the primary British army main battle tank of the post-Second World War period. Introduced in 1945, it is widely considered to be one of the most successful post-war tank designs, remaining in production into the 1960s, and seeing combat in the front lines into the 1980s. The chassis was also adapted for several other roles, and these have remained in service to this day. It became one of the most widely used tank designs, equipping armies around the world, with some still in service until the 1990s.\n\ <color=orange>Fast firing medium gun with fast traverse, however comes with low accuracy.</color>
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
@@ -51,8 +51,8 @@ PART {
 		yawTransformName = yawTransform
 		pitchTransformName = pitchTransform
 
-		pitchSpeedDPS = 8
-		yawSpeedDPS = 14
+		pitchSpeedDPS = 33
+		yawSpeedDPS = 33
 
 		minPitch = -12
 		maxPitch = 20
@@ -78,9 +78,9 @@ PART {
 		spinDownAnimation = false
 
 		roundsPerMinute = 7.8
-		maxDeviation = 0.04
-		maxTargetingRange = 2000
-		maxEffectiveDistance = 2000
+		maxDeviation = 0.09875
+		maxTargetingRange = 5700
+		maxEffectiveDistance = 5400
 
 		ammoName = CannonShells
 		bulletType = 105MMAPDS
