--- a/Turrets/tank_T-54.cfg
+++ b/Turrets/tank_T-54.cfg
@@ -24,7 +24,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 52PT412 (T-54)
 	manufacturer = Kerbal Kombat Anthology
-	description = The OKB-9 Object 137Sh / T-54-3 main battle tank turret armed with 52-PT-412 / D-10T 100mm rifled gun introduced in the years following the Second World War. The first T-54 prototype was completed by the end of 1945. The T-54 eventually became the main tank for armoured units of the Soviet Army, armies of the Warsaw Pact countries, and many others. T-54s and T-55s have been involved in many of the world's armed conflicts since the later part of the 20th century.
+	description = The OKB-9 Object 137Sh / T-54-3 main battle tank turret armed with 52-PT-412 / D-10T 100mm rifled gun introduced in the years following the Second World War. The first T-54 prototype was completed by the end of 1945. The T-54 eventually became the main tank for armoured units of the Soviet Army, armies of the Warsaw Pact countries, and many others. T-54s and T-55s have been involved in many of the world's armed conflicts since the later part of the 20th century.\n\ <color=orange>Average medium cannon with average ROF and turret traverse speed.</color>
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 0,1,0,0,1
 
@@ -50,8 +50,8 @@ PART {
 		yawTransformName = yawTransform
 		pitchTransformName = pitchTransform
 
-		pitchSpeedDPS = 8
-		yawSpeedDPS = 9.1
+		pitchSpeedDPS = 28
+		yawSpeedDPS = 28
 
 		minPitch = -4
 		maxPitch = 17
@@ -78,9 +78,9 @@ PART {
 		spinDownAnimation = false
 
 		roundsPerMinute = 6.15
-		maxDeviation = 0.05
-		maxTargetingRange = 2000
-		maxEffectiveDistance = 2000
+		maxDeviation = 0.0849
+		maxTargetingRange = 5300
+		maxEffectiveDistance = 5100
 
 		ammoName = CannonShells
 		bulletType = 100MMAPCR; 100MMAPDS
